# AVFFs-BOT

./: CMakeLists.txt  README.md  doSimu.cc
include/: ActionInit.hh  Constants.hh  DetConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGenerator.hh  RunAction.hh~  StandardDetectorSD.hh  StandardHit.hh  TOFHit.hh  TOFSD.hh
readTree/: Histograms.hh  TreeVars.hh  compile  draw.zsh  drawVirtual.cc  processVirtual.cc
src/: ActionInit.cc  DetConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGenerator.cc  RunAction.cc~  StandardDetectorSD.cc  StandardHit.cc  TOFHit.cc  TOFSD.cc
